apps/proxmox/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  ports:
    - name: http
      port: 7878
      protocol: TCP
      targetPort: 7878
  type: ClusterIP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: radarr
  labels:
    kubernetes.io/service-name: radarr
    endpointslice.kubernetes.io/managed-by: fluxcd
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.1.59
    conditions:
      ready: true
ports:
  - name: http
    port: 7878
    protocol: TCP
